--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,7 +13,9 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
-        
+
+jobs:
+  Test:
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
