--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,7 +21,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Requirements
-        run:  pip install flask flask-wtf
+        run: pip install flask
+        run: pip install flask flask-wtf
 
       - name: Unit Test
         run: python -m unittest -v test
