--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,9 +38,8 @@ jobs:
 
       - name: Build & Push Image
         run: |
-          docker build -t ${{ vars.GOOGLE_ARTIFACT }}/${{ vars.GOOGLE_PROJECT_ID }}/${{ vars.GOOGLE_REPONAME }}${{ vars.GOOGLE_MYAPP }}:latest .
-          docker images
-          docker push ${{ vars.GOOGLE_ARTIFACT }}/${{ vars.GOOGLE_PROJECT_ID }}/${{ vars.GOOGLE_REPONAME }}/${{ vars.GOOGLE_MYAPP }}:latest
+          docker build -t ${{ vars.GOOGLE_ARTIFACT }}/${{ vars.GOOGLE_PROJECT_ID }}/${{ vars.GOOGLE_REPONAME }}${{ vars.GOOGLE_MYAPP }}:latest .          
+          docker push ${{ vars.GOOGLE_ARTIFACT }}/${{ vars.GOOGLE_PROJECT_ID }}/${{ vars.GOOGLE_REPONAME }}${{ vars.GOOGLE_MYAPP }}:latest
 
   Deploy:
     needs: Build
@@ -61,7 +60,7 @@ jobs:
           gcloud run deploy ${{ vars.GOOGLE_MYAPP }} \
             --quiet \
             --region  ${{ vars.GOOGLE_REGION }} \
-            --image ${{ vars.GOOGLE_ARTIFACT }}/${{ vars.GOOGLE_PROJECT_ID }}/${{ vars.GOOGLE_REPONAME }}/${{ vars.GOOGLE_MYAPP }}:latest \
+            --image ${{ vars.GOOGLE_ARTIFACT }}/${{ vars.GOOGLE_PROJECT_ID }}/${{ vars.GOOGLE_REPONAME }}${{ vars.GOOGLE_MYAPP }}:latest \
             --platform managed \
             --allow-unauthenticated \
             --project ${{ vars.GOOGLE_PROJECT_ID }} \
